chore: refactor code